RESOLVED FIXED139521
InstancedArray crashes attempting to draw out of bounds
https://bugs.webkit.org/show_bug.cgi?id=139521
Summary InstancedArray crashes attempting to draw out of bounds
Dean Jackson
Reported 2014-12-10 18:41:19 PST
InstancedArray crashes attempting to draw out of bounds
Attachments
Patch (67.91 KB, patch)
2014-12-10 18:52 PST, Dean Jackson
no flags
Archive of layout-test-results from ews100 for mac-mountainlion (519.66 KB, application/zip)
2014-12-11 04:27 PST, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-mountainlion-wk2 (518.51 KB, application/zip)
2014-12-11 04:30 PST, Build Bot
no flags
Patch (68.82 KB, patch)
2014-12-11 10:42 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2014-12-10 18:41:47 PST
Dean Jackson
Comment 2 2014-12-10 18:52:14 PST
Build Bot
Comment 3 2014-12-11 04:27:41 PST
Comment on attachment 243088 [details] Patch Attachment 243088 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5385253694734336 New failing tests: fast/canvas/webgl/angle-instanced-arrays-out-of-bounds.html
Build Bot
Comment 4 2014-12-11 04:27:43 PST
Created attachment 243115 [details] Archive of layout-test-results from ews100 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 5 2014-12-11 04:30:13 PST
Comment on attachment 243088 [details] Patch Attachment 243088 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5963765388410880 New failing tests: fast/canvas/webgl/angle-instanced-arrays-out-of-bounds.html
Build Bot
Comment 6 2014-12-11 04:30:16 PST
Created attachment 243116 [details] Archive of layout-test-results from ews106 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Dean Jackson
Comment 7 2014-12-11 10:42:40 PST
Simon Fraser (smfr)
Comment 8 2014-12-11 11:01:28 PST
Comment on attachment 243131 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243131&action=review > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:2061 > +bool WebGLRenderingContext::validateDrawElements(const char* functionName, GC3Denum mode, GC3Dsizei count, GC3Denum type, long long offset, unsigned& numElements, GC3Dsizei primcount) primitiveCount?
Dean Jackson
Comment 9 2014-12-11 11:31:14 PST
Note You need to log in before you can comment on or make changes to this bug.